Week 3/Challenges/force-app/main/default/objects/ClassRoster__c/ClassRoster__c.object-meta.xml
<CustomObject>
    <label>Class Roster</label>
    <nameField>
        <displayFormat>CRS-{0000}</displayFormat>
        <label>Roster Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Class Rosters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>